gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b16967.d
version https://git-lfs.github.com/spec/v1
oid sha256:e939ac51099d1dff04886ae8391551d06f4d424241a3928af79ccdeb75f1df98
size 491
